AV2 Changelog :: version a4.0

+ Ability Level System
+ New skills menu

* Remove small space between radial segment hover
* Generally triple xp gains to account for levels